--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
 			</span>
 		</div>
 		<ul class = "right">
-			<li><%= link_to "home"%></li>
-			<li><%= link_to "about"%></li>
-			<li><%= link_to "officers"%></li>
-			<li><%= link_to "contact" %></li>
+			<li><%= link_to "home", home_index_path%></li>
+			<li><%= link_to "about", home_about_path%></li>
+			<li><%= link_to "officers", home_officers_path%></li>
+			<li><%= link_to "contact", home_contact_path %></li>
 		</ul>
 	</div>	
 </div>
