--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,2 +1,52 @@
-<h1>Home#contact</h1>
-<p>Find me in app/views/home/contact.html.erb</p>
+<header class = "sub-links">
+	<div class = "row">
+		<div class = "twelve columns">
+			<h1> Contact Us </h1>
+			<h4> Questions? Concerns? Let us know!</h4>
+		</div>
+	</div>
+</header>
+
+<div class = "main-content">
+	<div class = "row">
+		<div class ="two columns">
+			<ul class = "side-nav">
+				  <li><%= link_to "← Home", home_index_path%></li>		
+				  <li class="divider"></li>
+				  <li class = "active"><%= link_to "Contact Us", home_contact_path%></li>
+			</ul>
+		</div>
+
+		<div class ="ten columns" id = "contact-message">
+
+			<% if notice %>
+				<h5> <%= notice %> </h5>
+			<% else %>
+			
+				<%= form_for @contact_info do |f| %>
+					<%= f.label :name, "Name" %> 
+					<% if @contact_info.errors[:name].any? %>
+						<h6> Invalid Name </h6>
+					<% end %>
+					<%= f.text_field :name, class: "six", placeholder: "Bob the Builder" %>
+
+					<%= f.label :email, "Email" %>
+					<% if @contact_info.errors[:email].any? %>
+						<h6> Invalid Email </h6>
+					<% end %>
+					<%= f.text_field :email, class: "seven", placeholder: "Bob@builder.com" %>
+
+					<%= f.label :message, "Message" %>
+					<% if @contact_info.errors[:message].any? %>
+						<h6> Invalid message </h6>
+					<% end %>
+					<%= f.text_area :message, rows: 8, cols: 5, id: "message-area" %>
+
+					<%= f.submit 'Submit', class: "medium button" %>
+				<% end %>
+				
+			<% end %>
+
+		</div>
+	</div>
+</div>
