--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,7 +24,7 @@
 						<i class="foundicon-globe" id ="bottom-icon"></i>
 						<h5> Professional</h5>
 						<p>
-						Every individual has an idea that can revolutionize our society. Our goal is to help you make that spark of ingenuity into a reality.
+						Something about professional development. Something about professional development. Something about professional development.
 						</p>
 
 					</div>
@@ -33,7 +33,7 @@
 						<i class="foundicon-graph" id ="bottom-icon"></i>
 						<h5> Academic</h5>
 						<p>
-						Although we are diverse in background, you will develop everlasting brotherhood through collaboration and cooperation toward a common goal. 
+						Something about academic. 	Something about academic. 	Something about academic. 	Something about academic.  something
 						</p>
 					</div>
 
@@ -41,7 +41,7 @@
 						<i class="foundicon-smiley" id ="bottom-icon"></i>
 						<h5> Social</h5>
 						<p>
-						We aim to make an impact in our society. Tau Omega Pi is a new kind of Fraternity; we are society's think tank. 	
+						omething about social. Something about social. Something about social. Something about social. Something about social. 
 						</p>
 					</div>
 				</div>
@@ -69,7 +69,7 @@
 						</br></br> Feb 5, 2013 </br>
 					</span>
 					<span id = "ann-description">
-						<b>Meet the Chapter</br></b>
+						<b>First gen meeting</br></b>
 						TBD</br>
 						TBD</br>
 					</span>
@@ -77,7 +77,7 @@
 						</br></br> Feb 7, 2013 </br>
 					</span>
 					<span id = "ann-description">
-						<b>Chapter Social</br></b>
+						<b>Second gen meeting</br></b>
 						TBD</br>
 						TBD</br>
 					</span>
@@ -85,7 +85,7 @@
 						</br></br> Feb 9, 2013 </br>
 					</span>
 					<span id = "ann-description">
-						<b>Individual Interviews</br></b>
+						<b>Thirdgen meeting</br></b>
 						TBD</br>
 						TBD</br>
 					</span>
