--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,26 +66,26 @@
 					<h4> Upcoming Events </h4>
 
 					<span id = "ann-date">
-						</br></br> Feb 5, 2013 </br>
+						</br></br> JAn 31, 2013 </br>
 					</span>
 					<span id = "ann-description">
-						<b>First gen meeting</br></b>
+						<b>First General Meeting</br></b>
+						</br>
+						TBD</br>
+					</span>
+					<span id = "ann-date">
+						</br></br> Coming Soon </br>
+					</span>
+					<span id = "ann-description">
+						<b>Career Panel</br></b>
 						TBD</br>
 						TBD</br>
 					</span>
 					<span id = "ann-date">
-						</br></br> Feb 7, 2013 </br>
+						</br></br> Coming Soon </br>
 					</span>
 					<span id = "ann-description">
-						<b>Second gen meeting</br></b>
-						TBD</br>
-						TBD</br>
-					</span>
-					<span id = "ann-date">
-						</br></br> Feb 9, 2013 </br>
-					</span>
-					<span id = "ann-description">
-						<b>Thirdgen meeting</br></b>
+						<b>Info Session</br></b>
 						TBD</br>
 						TBD</br>
 					</span>
